依存関係にeslint, flow, prettierを追加

--- a/package.json
+++ b/package.json
@@ -4,16 +4,33 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "test:update": "jest -u",
+    "eslint": "eslint .",
+    "eslint:fix": "eslint --fix .",
+    "flow:start": "flow start",
+    "flow:stop": "flow stop",
+    "flow:status": "flow status",
+    "flow:coverage": "flow coverage"
   },
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.3"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
     "babel-jest": "22.4.3",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "flow-bin": "^0.67.1",
     "jest": "22.4.3",
+    "prettier": "^1.12.1",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
