--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android",
+    "web":
+      "./node_modules/.bin/webpack-dev-server -d --config ./web/webpack.config.js --inline --hot --colors",
     "test": "jest",
     "test:update": "jest -u",
     "eslint": "eslint .",
@@ -14,12 +18,16 @@
     "flow:coverage": "flow coverage"
   },
   "dependencies": {
-    "react": "16.3.1",
-    "react-native": "0.55.3"
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-native": "0.55.3",
+    "react-native-web": "^0.6.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
     "babel-jest": "22.4.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-react-native-web": "^0.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.19.1",
@@ -31,7 +39,11 @@
     "flow-bin": "^0.67.1",
     "jest": "22.4.3",
     "prettier": "^1.12.1",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "16.3.1",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "jest": {
     "preset": "react-native"
