--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-native": "0.55.3",
-    "react-native-web": "^0.6.1"
+    "react-native-web": "^0.6.1",
+    "react-navigation": "^2.0.0-rc.9"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.3",
