--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-native": "0.55.3",
     "react-native-web": "^0.6.1",
     "react-navigation": "^2.0.0-rc.9",
+    "react-primitives": "^0.5.1",
     "react-router-dom": "^4.2.2",
-    "snakeize": "^0.1.0"
+    "snakeize": "^0.1.0",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.4.3",
