webとnativeの両方でReact Routerを有効か

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-navigation": "^2.0.0-rc.9",
     "react-primitives": "^0.5.1",
     "react-router-dom": "^4.2.2",
+    "react-router-native": "^4.2.0",
     "snakeize": "^0.1.0",
     "styled-components": "^3.2.6"
   },
